# ai-cookbook

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/ai_cookbook/: chat.py  retrieval.py  structured.py  tools.py
src/langchain/: N1_prompt_parser.py  README.md  chat_agent.py  chat_agent_eval.py  kb_rag_eval.py
src/langchain/examples/: 1-prompt_parser.py  L1-Model_prompt_parser.ipynb  L6-functional_conversation-student.ipynb
src/langchain/rag_evals/: rag_eval_040125 14:03.csv
src/workflows/: README.md  orchestrator.py  parallelization.py  prompt_chaining.py  routing.py
tests/: test_chat.py  test_parallelization.py  test_prompt_chaining.py  test_routing.py
